1.20 Support
Fixed default config minor incompatibility with essentials /xp
Removed usage of NBTAPI deprecated methods
Refactored code
Fixed issue when loading partial mythic mobs type configuration